--- a/pos/home.html
+++ b/pos/home.html
@@ -22,7 +22,7 @@
             <img src="vistas/img/proyectos/3.png" alt="AIKING logo"></img>
             <h5>AIKING</h5>
           </a>
-          <a href="vistas/modulos/iniciarsesion.php" class="btn btn-online-success" role="button" aria-pressed="true" id="IniciarSesion">INICIAR SESIÓN</a>
+          <a href="iniciarsesion.php" class="btn btn-online-success" role="button" aria-pressed="true" id="IniciarSesion">INICIAR SESIÓN</a>
       </div>
     </nav>
 <!------------------------------------------------------NAVBAR2------------------------------------------------------------>
@@ -86,20 +86,6 @@
                         <h1>AIKING</h1>
                         <p class="d-none d-md-block">GESTOR DE PROYECTOS DE VINCULACIÓN DE LA ESCUELA SUPERIOR POLITÉCNICA DE CHIMBORAZO</p>
                     </div>
-
-  <!--       
-<div class="Flechas">
-          <div class = "Antes" href="#">
-          <a href="#" class="Antes" href="#" >
-          <img src="images/button-prev.gif" class="d-block w.100" alt="..." default="Regresar">
-          </div>
-
-          <div class = "Despues" href="#">
-          <a href="#" class="Despues" value="Siguiente">
-          <img src="images/button-next.gif" class="d-block w.100" alt="...">
-          </div>
-</div>
--->
 
 
 
